<?xml version="1.0"?>
<package format="2">
  <name>jackal_waypoint</name>
  <version>0.0.0</version>
  <description>The jackal_waypoint package. Moves to given point.</description>
  <maintainer email="trevor.slack@colorado.edu">Trevor</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
